force-app/main/default/objects/LoginAsRequest__c/LoginAsRequest__c.object-meta.xml
<CustomObject>
    <label>LoginAsRequest</label>
    <nameField>
        <displayFormat>LAR-{0000}</displayFormat>
        <label>Ticket Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>LoginAsRequests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>