force-app/main/default/objects/LoginAsRequest__c/fields/Approved_Until__c.field-meta.xml
<CustomField>
    <fullName>Approved_Until__c</fullName>
    <label>Approved Until</label>
    <type>DateTime</type>
</CustomField>