force-app/main/default/objects/LoginAsRequest__c/fields/Is_Valid__c.field-meta.xml
<CustomField>
    <fullName>Is_Valid__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Valid</label>
    <type>Checkbox</type>
</CustomField>