force-app/main/default/objects/LoginAsRequest__c/fields/Request_Reason__c.field-meta.xml
<CustomField>
    <fullName>Request_Reason__c</fullName>
    <label>Request Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>