force-app/main/default/objects/LoginAsRequest__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Approved_Until__c</columns>
    <columns>Request_Reason__c</columns>
    <columns>Is_Valid__c</columns>
    <columns>Approver_User__c</columns>
    <columns>Target_User__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>